# cognetic

./: .gitignore  .todo.json  CONTINUE_DEV.md  README.md  add_css.cjs  add_tools.cjs  fix_all_tools.cjs  fix_llm.cjs  index.html  package-lock.json  package.json  patch.cjs  patch_indexer.cjs  run-tauri.bat  update_nvidia.cjs  update_providers.cjs  vite.config.js
.mimocode/plans/: 1783061780468-quiet-forest.md
public/icons/: index.html  lucide_icons_list.js
scratch/: fix_streams.js  google_funcs.js  migrate_json.cjs  out.js
src/: global.css  main.js  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.cognetic/: index.db
src-tauri/capabilities/: default.json
src-tauri/src/: indexer.rs  lib.rs
src/components/: FileChangesSummary.css  FileChangesSummary.js
src/components/toolbar/: Toolbar.css  Toolbar.html  Toolbar.js
src/config/: systemPrompt.js
src/core/: changeTracker.js  llmService.js  llmService.js.backup  lspService.js  router.js  state.js  tauri.js  toolEngine.js
src/views/agents/: Agents.css  Agents.html  Agents.js  pages.css  providers.json
src/views/browser/: Browser.css  Browser.html  Browser.js
src/views/channels/: Channels.css  Channels.html  Channels.js
src/views/connectors/: Connectors.css  Connectors.html  Connectors.js
src/views/home/: Home.css  Home.html  Home.js  injectFileChangeBar.js
src/views/settings/: Settings.css  Settings.html  Settings.js
