[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
path-clean = "1.0.1"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
glob = "0.3.3"
regex = "1.12.4"
walkdir = "2.5.0"
tauri-plugin-shell = "2.3.5"
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "4"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
serde_repr = "0.1.20"
